# object-recognition-model

./: .gitignore  README.md  install_dependencies.py  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: main.ipynb
