[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-recognition-model"
version = "1.0.0"
description = "Modelo de reconocimiento de objetos"
readme = "README.md"
authors = [
    {name = "Santiago Arias", email = "santiari05@hotmail.com"},
    {name = "Cristhian Tapiero", email = ""}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.15.0",
    "keras>=2.15.0",
    "opencv-python>=4.8.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "fiftyone>=0.20.0",
    "fiftyone-brain>=0.20.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "isort>=5.12.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "pre-commit>=3.3.0",
    "jupyter-contrib-nbextensions>=0.7.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    "mypy>=1.4.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/object-recognition-model"
Repository = "https://github.com/tu-usuario/object-recognition-model"
Documentation = "https://github.com/tu-usuario/object-recognition-model#readme"
Issues = "https://github.com/tu-usuario/object-recognition-model/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["object_recognition_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "cv2.*",
    "fiftyone.*",
]
ignore_missing_imports = true
